// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DB — golden (recorded on the untouched base) /copilot?capabilityId=schedule at 390 (CopilotShell, no autoSubmitSeed) 1`] = `
{
  "lines": 71,
  "sha256": "47db3d5d18d258de5c25ab24faedf7672448f14eb0f678ca0ff837c97b28688b",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule at 390 with the "Tell me what to change" sheet open (ScheduleEditPanel, modal) 1`] = `
{
  "lines": 770,
  "sha256": "becb13e078444dd295008d465d0226c7c25b3b69b6acb72e8d6e75c4016cd8bb",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule-pro at native 1000 × 700 (the legacy branch) 1`] = `
{
  "lines": 400,
  "sha256": "3b89431a4296f40c4e0f324928670d89cbfbeec65be40891999e8102b0b2189c",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule-pro?projectId at 390 iOS: the narrow gate 1`] = `
{
  "lines": 49,
  "sha256": "d868aa1c80a3239777fbba2eef670fe444806be5049684e23f106836c2515b87",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) EarnedValuePanel card + its sheet 1`] = `
{
  "lines": 132,
  "sha256": "335c626ff7a610cd11d03f55f6dc878eba54585056e1e59343f5f10ce8aab2de",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) ScheduleShareSheet, open (full and by trade) 1`] = `
{
  "lines": 53,
  "sha256": "8218a77c64a7f113a2eacb973026220a5a2ab70bbbf48f94757c6a831ab27693",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) ScheduleShareSheet, open (full and by trade) 2`] = `
{
  "lines": 88,
  "sha256": "6312006955ecb1db0340925fc917f83a1e435b20430502d5a0f9388f14b27bc1",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) SubUpdatesPanel card + its sheet 1`] = `
{
  "lines": 118,
  "sha256": "e751e96730c6e089e8069064dcb2c558ca67268277c551a8a06ac191d388bf10",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) WeatherRescheduleModal, open 1`] = `
{
  "lines": 88,
  "sha256": "6a09ffd9673edab6926985322b90b6cd8d8c19c124e02238362325b7b149e5b4",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) WeatherReschedulePrompt banner + its sheet 1`] = `
{
  "lines": 108,
  "sha256": "96c9623352e03aa84cafaf27176dafb749c95d344b26808ea111f58c9db8e7bf",
}
`;
